Converted the DownloadManager to use LiveData for the download queue